--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Pat Claffey
 
 # Short bio or description (displayed in the header)
-description: Python Consultant - Python Volunteer - Python Startup 
+description: Python Consultant / Volunteer / Start-up 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/9211427?v=3&u=bc78925a4024a18cba3d184315ccdfd615d76413&s=140
